# tas-1

./: .gitignore  CITATION.cff  LICENSE  README.md  WORKING_GROUP.md
.github/workflows/: conformance.yml
conformance/: README.md  generate.py  run.py
docs/: explainer.md
docs/roadmap/: tas-2-sketch.md  tas-3-sketch.md  tas-4-sketch.md
reference/python/: README.md  pyproject.toml
reference/python/tas1/: __init__.py  gradient_hash.py  leaves.py  merkle.py
reference/solidity/: ITAS1Registry.sol  README.md
reference/solidity/examples/: MinimalRegistry.sol
spec/: v1.md
test-vectors/: README.md  gradient-hash.json  layer1-leaves.json  layer2-leaves.json  merkle-trees.json
