[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tas1"
version = "0.1.0"
description = "TAS-1 Training Attribution Standard — reference implementation"
license = { text = "CC0-1.0" }
requires-python = ">=3.10"
dependencies = [
    "eth-utils>=4.0",
    "eth-abi>=5.0",
    "eth-hash[pycryptodome]>=0.7",
    "numpy>=1.26",
]

[project.urls]
Specification = "https://github.com/tbmoss3/tas-1/blob/main/spec/v1.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["tas1*"]
